Fix colors and alignment in the  menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ h2 {
     float: left;
     font-size: 280%;
     letter-spacing: 3px;
-    color: #333333;
+    color: #494949;
   }
 
   #menu, #logo {
@@ -27,8 +27,10 @@ h2 {
     color: inherit;
 }
 
-  #top-nav a:hover {
-    border-bottom: 1px solid #3a3a3a;
+  .top-nav a:hover {
+    /* border-bottom: 1px solid #3a3a3a;
+    border-top: 1px solid #3a3a3a; */
+    background-color: rgba(106,106,106, .1);
 }
 
   /* .active {
@@ -62,7 +64,7 @@ h2 {
     margin: 0;
     padding: 0;
   }
-  
+
   .menu > li {
     margin: 0 1rem;
     overflow: hidden;
@@ -111,7 +113,8 @@ h2 {
   }
   
   #menu-toggle:checked + .menu-button-container .menu-button {
-    background: rgba(2, 237, 57, 0);
+    background: rgba(106,106,106, 0);
+
   }
   
   #menu-toggle:checked + .menu-button-container .menu-button::after {
